@@ -189,7 +189,8 @@ public class SingleEventBatcher {
       return false;
     }
 
-    final long threadId = Thread.currentThread().threadId();
+    @SuppressWarnings("deprecation")
+    final long threadId = Thread.currentThread().getId();
     batchRemovalLocksByThread.acquire(threadId);
     try {
       queueEventForIngestion_unlocked(threadId, event);
